--- a/view_dungeon/src/pages/DisplayDungeon.css
+++ b/view_dungeon/src/pages/DisplayDungeon.css
@@ -31,6 +31,7 @@ button {
   padding: 10px 20px;
   margin: 5px;
   font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
