--- a/view_dungeon/src/pages/DisplayDungeon.css
+++ b/view_dungeon/src/pages/DisplayDungeon.css
@@ -25,29 +25,29 @@ body {
   
   
   button {
-    background-color: #701620;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    font-size: 16px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    background-color: #701620; /*background color for button*/
+    color: white;/*text white*/
+    border: none;/*no border*/
+    padding: 10px 20px; /*added padding*/
+    margin: 5px; /*added a margin*/
+    font-size: 16px; /*font size*/
+    font-family: Verdana, Geneva, Tahoma, sans-serif; /*font style*/
+    border-radius: 5px; /* border radius */
+    cursor: pointer; /*cursor style*/
+    transition: background-color 0.3s ease; /*how fast it transitions*/
   }
   
   button:hover {
-    background-color: #d7505c;
+    background-color: #d7505c; /*hover button  color*/
   }
   
   button:disabled {
-    background-color: #787575; 
-    cursor: not-allowed;
-    opacity: 0.6;
+    background-color: #787575; /*button color when disabled */
+    cursor: not-allowed; /*no cursor option*/
+    opacity: 0.6; /*color fade*/
   }
 
   img {
-    width: 150px;
-    height: 150px;
+    width: 150px; /* width of image*/
+    height: 150px;/* height of image*/
  }
